penambahan dan perbaikan pada code html dan css

--- a/Biodata Diri.html
+++ b/Biodata Diri.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Biodata Diri</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <title>Biodata</title>
+    <link rel="stylesheet" href="assets/style1.css">
 </head>
 <body>
-    <section>
-        <div>
+    <section><header class="header">
+        <div class="logo">
+            <img src="https://i.ibb.co/Jm2WqVx/Logo-Undiksha.png" width="150">
+        </div>
+            <nav class="nav">
+            <h1>
+                SISTEM KEPEGAWAIAN
+             </h1>
+            <h1>
+                Universitas Pendidikan Ganesha
+            </h1>
+            <ul>
+                <li><a href="#logout">LOG OUT</a></li>
+            </ul>
+            </nav>
+    </header>
+        <div class="wrapper">
+            <aside class="sidebar">
+            <div style="padding: 10px;">
+            <b>Menu</b><br>
+            <hr>
+            <a href="#">Home</a><br />
+            <a href="Biodata Diri.html">Biodata</a><br />
+            <a href="Form Update.html">Update Biodata</a><br />
+            <a href="#">Contact</a><br />
+            </div>
+            </aside>
+            <div>
             <h1>Biodata</h1>
             <img src="https://i.ibb.co/2qGbM4w/IMG-20190326-WA0002.jpg" border="0" height="150" align="left"></a>
             <p>&emsp;Nama &emsp;&emsp;&emsp;&emsp;&emsp;: I Komang Marjaya Adi Surya</p>
@@ -18,8 +40,7 @@
             <p>&emsp;Jenis Kelamin &emsp;&ensp;&nbsp;: Laki-laki</p>
             <p>&emsp;Tempat, tgl lahir &ensp;&nbsp;: Tianyar, 21 Maret 2001</p>
             <p>&emsp;Alamat &emsp;&emsp;&emsp;&emsp;&ensp;: Br. Dinas Darmawinangun, Desa Tianyar, Kecamatan Kubu, Kabupaten Karangasem, Bali</p>
-        </div>
-        <div>
+            <div class="content">
             <h3>Riwayat Pendidikan</h3>
             <table border="1" cellpadding="10" cellspacing="0">
                 <thead>
@@ -56,5 +77,9 @@
                     </tbody>
             </table>
         </div>
+    </div>
+    <footer class="footer">
+        <font color="white">Copyright &#169; *****</white>
+    </footer>
     </section>   
 </body>
