--- a/Form Update.html
+++ b/Form Update.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>External Style</title>
-    <link rel="stylesheet" type="text/css" href="assets/style1.css">
+    <title>Form Update</title>
+    <link rel="stylesheet" href="assets/style1.css">
 </head>
 <body>
-    <div class="container">
-    <header class="header">
-    <div class="logo">
-    <img src="C:\Users\asus\Documents\Pemrograman Web\Images\logo Undiksha.png" width="100">
-</div>
-<nav class="nav">
-    <h1>
-        Selamat Datang
-        </h1>
-        <ul>
-        <li><a href="#profile">Profile</a></li>
-        <li><a href="#logout">Logout</a></li>
-        </ul>
-        </nav>
-        </header>
-        <div class="wrapper">
-        <aside class="sidebar">
-        <div style="padding: 10px;">
-        <b>Menu</b><br>
-        <hr>
-        <a href="#">Home</a><br />
-        <a href="#">Biodata</a><br />
-        <a href="#">Update Biodata</a><br />
-        <a href="#">Contact</a><br />
-        </div>
-        </aside>
-<body>
-    <nav>
-
-    </nav>
     <section>
         <div>
+            <header class="header">
+                <div class="logo">
+                    <img src="https://i.ibb.co/Jm2WqVx/Logo-Undiksha.png" width="150">
+                </div>
+                    <nav class="nav">
+                    <h1>
+                        SISTEM KEPEGAWAIAN
+                     </h1>
+                    <h1>
+                        Universitas Pendidikan Ganesha
+                    </h1>
+                    <ul>
+                        <li><a href="#logout">LOG OUT</a></li>
+                    </ul>
+                    </nav>
+            </header>
+        </div class="content">
+                    <div class="wrapper">
+                <aside class="sidebar">
+                    <div style="padding: 10px;">
+                    <b>Menu</b><br>
+                    <hr>
+                    <a href="#">Home</a><br />
+                    <a href="Biodata Diri.html">Biodata</a><br />
+                    <a href="#">Update Biodata</a><br />
+                    <a href="#">Contact</a><br />
+                    </div>
+                </aside>
+          
             <h1>Form Update Data Diri Pegawai</h1>
             <form>
                 <table>
@@ -86,9 +85,20 @@
                         <td><textarea name="komentar" rows="5" cols="20"></textarea>
                         </td>
                     </tr>
+                    <tr>
+                        <td colspan="3" align="right"><button type="submit">simpan</button></td>
+                        <td colspan="3" align="right"><button type="reset">reset</button>
+                        </td>
+                    </tr>
                 </table>
-                    <button type="submit">simpan</button>
-                    <button type="reset">reset</button>
             </form>
         </div>
-    </section>    
+    
+        </div>
+            <footer class="footer">
+                <font color="white">Copyright &#169; *****</white>
+            </footer>
+        </div>
+    </section>
+    </body>
+</html>    
