penambahan script jquery untuk fungsi show hide password

--- a/Responsive/Responsive design.html
+++ b/Responsive/Responsive design.html
@@ -3,16 +3,16 @@
         <title>How to Make</title>
         <link rel="stylesheet" href="Assets/style1.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     </head>
 
     <body>
         <div class="wrap">
         <header class="header">
                 <div class="logo">
-                <img src="Assets/creatif.png" width="100">
                 <div class="judul">
-                <h2 style="margin: 0px;">Selamat Datang</h2>
-                <h4 style="margin: 0px;">How to Make</h4>
+                <h2 style="margin: 0px;">How to Make</h2>
+                <h4 style="margin: 0px;">Make everything easy</h4>
                 </div>
             </div>
         </header>
@@ -31,6 +31,9 @@
                 <li>
                 <a href="#">Kontak</a>
                 </li>
+                <li>
+                <a href="login.html">LOGIN</a>
+                </li>
             </ul>
         </nav>
         
@@ -45,9 +48,10 @@
             </ul>
         </div>
         <div>
-            <h2>Tips Memasak</h2>
+            <h2>Pencarian Terpopuler</h2>
             <ul class="menusidebar">
-                <li><a href=""></a></li>
+                <li><a href="">Odading</a></li>
+                <li><a href="">Desert</a></li>
             </ul>
         </div>
         </div>
@@ -55,7 +59,7 @@
 
         <div class="blog">
             <div class="conteudo">
-            <img src="Assets/creatif.png">
+            <img src="https://i.ibb.co/ySVdnzW/dessert-box.jpg" alt="dessert-box" border="0"></a>
             <h1>Desert Oreo</h1>
             <hr>
             <div class="post=info">Diposting oleh Admin </div>
@@ -92,26 +96,26 @@
                 <td>
                     <ul><li>Siapkan 2 box ukuran 9x9x5 cm</li></ul>
                 </td>
-                <td><ul>LAPISAN SATU
-                    <li>1. Campur susu bubuk dan air, aduk sampai susu larut. Sisihkan.</li>
-                    <li>2. Hancurkan oreo.</li>
-                    <li>3. Siram 2 sdm air susu & 2 sdm margarin cair ke oreo.
+                <td><ol>LAPISAN SATU
+                    <li>Campur susu bubuk dan air, aduk sampai susu larut. Sisihkan.</li>
+                    <li>Hancurkan oreo.</li>
+                    <li>Siram 2 sdm air susu & 2 sdm margarin cair ke oreo.
                         Aduk rata, lalu letakkan ke dalam box. Ratakan sambil di tekan.</li>
-                    <li>4. Masukkan freezer.</li>
-                </ul>
+                    <li>Masukkan freezer.</li>
+                </ol>
                 </td>
-                <td><ul>LAPISAN DUA 
-                    <li>1. Blender semua bahan kecuali minyak.</li>
-                    <li>2. Tuang minyak sedikit demi sedikit & blender hingga mengental.</li>
-                    <li>3. Diamkan selama 15 menit lalu tuang ke atas lapisan satu & masukkan freezer.</li>
-                </ul></td>
-                <td><ul>LAPISAN TIGA
-                    <li>1. Masak coklat dengan air susu sisa susu lapisan satu. Sampai coklat mencair.</li>
-                    <li>2. Masukkan larutan maizena. Masak hingga mendidih dan mengental.</li>
-                    <li>3. Angkat, biarkan hangat.</li>
-                    <li>4. Tuang ke atas lapisan dua.</li>
-                    <li>5. Masukkan ke dalam kulkas.</li>
-                </ul></td>
+                <td><ol>LAPISAN DUA 
+                    <li>Blender semua bahan kecuali minyak.</li>
+                    <li>Tuang minyak sedikit demi sedikit & blender hingga mengental.</li>
+                    <li>Diamkan selama 15 menit lalu tuang ke atas lapisan satu & masukkan freezer.</li>
+                </ol></td>
+                <td><ol>LAPISAN TIGA
+                    <li>Masak coklat dengan air susu sisa susu lapisan satu. Sampai coklat mencair.</li>
+                    <li>Masukkan larutan maizena. Masak hingga mendidih dan mengental.</li>
+                    <li>Angkat, biarkan hangat.</li>
+                    <li>Tuang ke atas lapisan dua.</li>
+                    <li>Masukkan ke dalam kulkas.</li>
+                </ol></td>
                 <td>
                     <ul><li>Simpan dalam kulkas sampai set. Dimakan besoknya lebih enak. Sajikan dingin</li></ul>
                 </td>
@@ -120,9 +124,8 @@
                 </td>
             </tr>
         </div>
-    </div>
     <div class="footer" align="center">
-        <a href="#">@adi Soerya</a>
+        <a href="#">marjaya@undiksha.ac.id</a>
     </div>
     </body>
 </html>
